feat: add ability to rename gifs
